# DataScienceApp

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
pages/: 10_shap_lgbm.py  1_mito_analysis.py  2_sweetviz_profiling.py  3_correlation.py  4_decomposition_linear.py  5_correlation.py  5_decomposition_nonelinear.py  6_shap_regression.py  7_shap_classification.py  8_metrics.py  99_checklist.py  9_feature_engineering.py  corr_page.py  eda_checklist_page.py  feature_importance_page.py  lgb_shap.py  metrics_page.py  mito_page.py  mutual_information.py  pca_page.py  sweetviz_page.py  umap_page.py
